Bug 1704040, adjust border cropping computation on windows to better handle high dpi values, r=jmathies

Differential Revision: https://phabricator.services.mozilla.com/D111733